--- a/highChart.html
+++ b/highChart.html
@@ -208,9 +208,13 @@
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
                                         <ul class="dropdown-menu" role="menu">
-                                            <li><a href="#" id="lineShow">Series Show</a>
+                                            <li><a href="#" id="lineTokyoShow">Tokyo Show</a>
                                             </li>
-                                            <li><a href="#" id="lineHide">Series Hide</a>
+                                            <li><a href="#" id="lineTokyoHide">Tokyo Hide</a>
+                                            </li>
+                                            <li><a href="#" id="lineLondonShow">London Show</a>
+                                            </li>
+                                            <li><a href="#" id="lineLondonHide">London Hide</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -235,9 +239,9 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
                                     <ul class="dropdown-menu" role="menu">
-                                        <li><a href="#">Settings 1</a>
+                                        <li><a href="#" id="barAddSeries">Add</a>
                                         </li>
-                                        <li><a href="#">Settings 2</a>
+                                        <li><a href="#" id="barDeleteSeries">Delete</a>
                                         </li>
                                     </ul>
                                 </li>
