--- a/highChart.html
+++ b/highChart.html
@@ -239,9 +239,9 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
                                     <ul class="dropdown-menu" role="menu">
-                                        <li><a href="#" id="barAddSeries">Add</a>
+                                        <li><a href="#" id="barAddSeries">Data Add</a>
                                         </li>
-                                        <li><a href="#" id="barDeleteSeries">Delete</a>
+                                        <li><a href="#" id="barDeleteSeries">Data Delete</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -269,9 +269,11 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
                                     <ul class="dropdown-menu" role="menu">
-                                        <li><a href="#">Settings 1</a>
+                                        <li><a href="#" id="bubbleTransparent">Transparent</a>
                                         </li>
-                                        <li><a href="#">Settings 2</a>
+                                        <li><a href="#" id="bubbleRecover">Recover Transparent</a>
+                                        </li>
+                                        <li><a href="#" id="bubbleColorChange">Color Change</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -296,9 +298,9 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
                                     <ul class="dropdown-menu" role="menu">
-                                        <li><a href="#">Settings 1</a>
+                                        <li><a href="#" id="pieBackground">Change background</a>
                                         </li>
-                                        <li><a href="#">Settings 2</a>
+                                        <li><a href="#" id="pieGradient">Gradient background</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -322,15 +324,6 @@
                                 <h2>Dynamic Chart <small>Sessions</small></h2>
                                 <ul class="nav navbar-right panel_toolbox">
                                     <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                                    </li>
-                                    <li class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                                        <ul class="dropdown-menu" role="menu">
-                                            <li><a href="#">Settings 1</a>
-                                            </li>
-                                            <li><a href="#">Settings 2</a>
-                                            </li>
-                                        </ul>
                                     </li>
                                     <li><a class="close-link"><i class="fa fa-close"></i></a>
                                     </li>
@@ -361,6 +354,8 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://code.highcharts.com/highcharts.js"></script>
 		    <script src="https://code.highcharts.com/highcharts-more.js"></script>
+		    <script src="https://code.highcharts.com/modules/data.js"></script>
+        <script src="https://code.highcharts.com/modules/drilldown.js"></script>
 		    <script src="https://code.highcharts.com/modules/exporting.js"></script>  
         <!-- Custom Theme Scripts -->
         <script src="js/custom.min.js"></script>
