--- a/chartjs.html
+++ b/chartjs.html
@@ -176,7 +176,7 @@
           <div class="">
             <div class="page-title">
               <div class="title_left">
-                <h3>Chart Js <small>Some examples to get you started</small></h3>
+                <h3>Chart Js</h3>
               </div>
 
               <div class="title_right">
@@ -204,9 +204,9 @@
                       <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
                         <ul class="dropdown-menu" role="menu">
-                          <li><a href="#">Settings 1</a>
+                          <li><a href="#" id="chartJSData1">Settings 1</a>
                           </li>
-                          <li><a href="#">Settings 2</a>
+                          <li><a href="#" id="chartJSData2">Settings 2</a>
                           </li>
                         </ul>
                       </li>
@@ -384,6 +384,7 @@
     <script src="js/chartjs/Chart.bundle.min.js"></script>
     <script src="js/chartjs/Chart.js"></script>
     <script src="js/chartjs/Chart.min.js"></script>
+    <script src="js/chartjs/data.js"></script>
     <!-- JQVMap -->
     <script src="js/jquery.vmap.js"></script>
     <script src="js/jquery.vmap.world.js"></script>
@@ -392,7 +393,7 @@
     <script src="js/moment.min.js"></script>
     <script src="js/daterangepicker.js"></script>
     <!-- Custom Theme Scripts -->
-    <script src="js/custom.min.js"></script>
+    <script src="js/custom.js"></script>
 
   </body>
 </html>
