--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   </li>
                   <li><a><i class="fa fa-chrome" aria-hidden="true"></i> View Model <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="chartjs.html">AngularJS</a></li>
+                      <li><a href="Angular1.6.html">AngularJS-1.6</a></li>
                       <li><a href="chartjs.html">ReactJS</a></li>
                       <li><a href="chartjs.html">VueJS</a></li>
                     </ul>
