--- a/Angular1.6.html
+++ b/Angular1.6.html
@@ -244,10 +244,10 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="control-label col-md-3 col-sm-3 col-xs-12">Date Of Birth <span class="required">*</span>
+                                    <label class="control-label col-md-3 col-sm-3 col-xs-12">Date Of Birth(only Number) <span class="required">*</span>
                                     </label>
                                     <div class="col-md-6 col-sm-6 col-xs-12">
-                                        <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" ng-model="birth1" required="required" type="text">
+                                        <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" ng-model="birth1" required="required" type="text" only-number>
                                     </div>
                                     <div class="col-md-3 col-sm-3 col-xs-12" style="margin-top: 7px">
                                         Date Of Birth: {{birth1}}
@@ -335,4 +335,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <!-- Custom Theme Scripts -->
     <script src="js/custom.min.js"></script>
+    <script src="js/socket.io-1.3.5.min.js"></script>
     <script src="js/angular-1.6.js"></script>
