--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <ul class="nav child_menu">
                       <li><a href="Angular1.6.html">AngularJS-1.6</a></li>
                       <li><a href="chartjs.html">ReactJS</a></li>
-                      <li><a href="chartjs.html">VueJS</a></li>
+                      <li><a href="Vue.html">VueJS</a></li>
                     </ul>
                   </li>
                 </ul>
