--- a/Angular1.6.html
+++ b/Angular1.6.html
@@ -416,3 +416,5 @@
     <script src="js/custom.min.js"></script>
     <script src="js/socket.io-1.3.5.min.js"></script>
     <script src="js/angular-1.6.js"></script>
+</body>
+</html>
