--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   <li><a><i class="fa fa-chrome" aria-hidden="true"></i> View Model <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="Angular1.6.html">AngularJS-1.6</a></li>
-                      <li><a href="chartjs.html">ReactJS</a></li>
+                      <li><a href="reactjs.html">ReactJS</a></li>
                       <li><a href="Vue.html">VueJS</a></li>
                     </ul>
                   </li>
