Updated react and angular

--- a/reactjs.html
+++ b/reactjs.html
@@ -193,6 +193,8 @@
     				<!--	<button onClick="unmount()">Unmount</button>-->
     				<!--	<br>-->
     				<div id="panel"></div>
+    				<div class="ln_solid"></div>
+    				<div id="panel2"></div>
                 </div>
             </div>
         </div>
