--- a/reactjs.html
+++ b/reactjs.html
@@ -13,8 +13,8 @@
         <link href="css/custom.min.css" rel="stylesheet">
 		
 		<!-- ReactJS -->
-		<script src="https://fb.me/react-dom-0.14.7.min.js"></script>
-        <script src="https://fb.me/react-0.14.7.min.js"></script>
+		<script src="https://fb.me/react-dom-0.14.7.js"></script>
+        <script src="https://fb.me/react-0.14.7.js"></script>
         <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.5.4/react-dom.min.js"></script>-->
         <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.5.4/react.min.js"></script>-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
