--- a/chartjs.html
+++ b/chartjs.html
@@ -365,7 +365,7 @@
         <!-- footer content -->
         <footer>
           <div class="pull-right">
-            Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+            Dashboard Project - Bootstrap Admin Template by Junho && Daniel
           </div>
           <div class="clearfix"></div>
         </footer>
