--- a/googleChart.html
+++ b/googleChart.html
@@ -49,9 +49,9 @@
                       </li>
                       <li><a><i class="fa fa-chrome" aria-hidden="true"></i> View Model <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                          <li><a href="chartjs.html">AngularJS</a></li>
-                          <li><a href="chartjs.html">ReactJS</a></li>
-                          <li><a href="chartjs.html">VueJS</a></li>
+                          <li><a href="Angular1.6.html">AngularJS</a></li>
+                          <li><a href="reactjs.html">ReactJS</a></li>
+                          <li><a href="Vue.html">VueJS</a></li>
                         </ul>
                       </li>
                     </ul>
